Fix font sizes, whitespace and add copy.
Fix font sizes, whitespace, and emphasis on what is bold in the table to be closer to Steve's design.  Also add copy describing user roles.

--- a/src/organizations/subnav/_element.scss
+++ b/src/organizations/subnav/_element.scss
@@ -4,7 +4,7 @@ main.with-subnav {
   .subnav {
     border-bottom: 1px solid $govuk-grey-2;
     margin: 0;
-    margin-bottom: $govuk-spacing-scale-6;
+    margin-bottom: $govuk-spacing-scale-8;
 
     div:first-of-type {
       padding-left: 0;
